--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="overall-container">
+        <aside class="sidebar">
+            
+        </aside>
+        <div class="main-content">
+            <div class="header"></div>
+            <div class="content"></div>
+        </div>
+    </div>
 </body>
 </html>
