Create the announcement and the trending sections

--- a/index.html
+++ b/index.html
@@ -146,7 +146,67 @@
                     </div>
                 </div>
                 <div class="labels">
-                   
+                    <div class="announcements-section">
+                        <h2 class="announcements-section-title">Announcements</h2>
+                        <div class="anouncements-section-content">
+                            <div class="announcement">
+                                <h3 class="announcement-title">Site Maintenance</h3>
+                                <p class="announcement-description">Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales congue...
+                                </p>
+                            </div>
+                            <div class="announcement">
+                                <h3 class="announcement-title">Community Share Day</h3>
+                                <p class="announcement-description">Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan porttitor...
+                                </p>
+                            </div>
+                            <div class="announcement">
+                                <h3 class="announcement-title">Updated Privacy Policy</h3>
+                                <p class="announcement-description">Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla sagittis sem in mattis...
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="trending-section">
+                        <h2 class="trending-section-title">Trending</h2>
+                        <div class="trending-section-content">
+                            <div class="trending-user">
+                                <div class="trending-user-img">
+                                    <img src="images/tegan.jpg" alt="">
+                                </div>
+                                <div class="trending-user-infos">
+                                    <h4 class="trending-user-name">@tegan</h4>
+                                    <p class="trending-user-desc">World Peace Builder</p>
+                                </div>
+                            </div>
+                            <div class="trending-user">
+                                <div class="trending-user-img">
+                                    <img src="images/morgan.jpg" alt="">
+                                </div>
+                                <div class="trending-user-infos">
+                                    <h4 class="trending-user-name">@morgan</h4>
+                                    <p class="trending-user-desc">Super Cool Project</p>
+                                </div>
+                            </div>
+                            <div class="trending-user">
+                                <div class="trending-user-img">
+                                    <img src="images/kendall.jpg" alt="">
+                                </div>
+                                <div class="trending-user-infos">
+                                    <h4 class="trending-user-name">@kendall</h4>
+                                    <p class="trending-user-desc">Life Changing App</p>
+                                </div>
+                            </div>
+                            <div class="trending-user">
+                                <div class="trending-user-img">
+                                    <img src="images/alex.jpg" alt="">
+                                </div>
+                                <div class="trending-user-infos">
+                                    <h4 class="trending-user-name">@alex</h4>
+                                    <p class="trending-user-desc">Life Changing App</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 </body>
